# mandelbrot

./: CMakeLists.txt  LICENSE  README.md  main.cpp
.circleci/: config.yml
.github/workflows/: cmake.yml
ext/glad/include/glad/: glad.h
ext/glad/src/: glad.c
